force-app/main/default/objects/Invoice_User_Note__c/Invoice_User_Note__c.object-meta.xml
<CustomObject>
    <description>Custom object to hold store the NetSuite user memos from the invoices</description>
    <label>Invoice User Note</label>
    <nameField>
        <label>Invoice User Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice User Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>