force-app/main/default/objects/Invoice_User_Note__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <description>NetSuite User Note Author</description>
    <label>Author</label>
    <length>255</length>
    <type>Text</type>
</CustomField>