force-app/main/default/objects/Invoice_User_Note__c/fields/Most_Recent_Memo__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Memo__c</fullName>
    <description>SC-000046</description>
    <formula>IF(
  Date__c=Invoice__r.Most_Recent_Memo__c,
  TRUE,
  FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Memo</label>
    <type>Checkbox</type>
</CustomField>